  - Expanded mlunit_param to get and set the whole parameter configuration.

  - Fix: assert() calls break R2006b compatibility.
  - Fix: mat2str displays strings differently on R2006b and probably before.
  - Fix: function stringification contains whitespace on R2006b, but not later.
  - Fix: errors in a set_up fixture prevent execution of the tear_down
    fixture and mlunit_param reversion


mlUnit 1.6.7 (2015-01-08)
-------------------------

  - Added assert_matfile_equals: Raise an error if two mat Files differ. [F#12]
  - Added support for partial stack comparison in assert_error.
  - Test suite functions may declare their host function on the first or
    succeeding lines.
  - assert_equals failure prints differences on top of each other, instead of
    next to teach other for improved readability
  - Improved recursive_test_run's output for readability. Which functions failed
    should now be easily discernible. Of course, random warnings and disps still
    clutter the output. [F#14]
  - Failures now only print a part of the stack trace and hides the higher
    calling chain.
  - assert_* functions provide default failure message if none given
  - Failures now recognized by typed error. Still needs magic string for masking
    the actual error message.
  - Sample directory for assert failure outputs.
  - Enable (admittedly hacked) unit testing for private functions.
  - assert_equals now only displays differences when comparing structs,
    instead of slapping a wall of text in your face

  - Fix: build.xml did not execute mlUnit tests; report directory was not being
    created; MATLAB automation options conflicted; MATLAB property check failed.
  - Fix: Error prelude not filtered for newer MATLABs (around R2011b)
  - Fix: Test suite functions whose host function is not declared on the very
    first line lead to an unintelligible error.
  - Fix: some numeric arrays deemed equal, even if of different size